--- a/Client/src/Container/Shoppinglist/Shoppinglist.css
+++ b/Client/src/Container/Shoppinglist/Shoppinglist.css
@@ -1,20 +1,33 @@
-.add_btn {
-    margin-left: 40%;
+.main-container {
+    font-family: "Muli";
+    position: relative;
+
+}
+
+h5 {
+    margin-left: 4%;
+}
+
+.Table {
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .delete {
     font-size: 20px;
     color: rgb(0, 0, 0);
+}
 
-
+.add_btn {
+    text-align: center;
+    margin-bottom: 3%;
+    margin-right: 3%;
 
 }
 
 .delete:hover {
-    color: rgb(255, 0, 0);
+    color: rgb(218, 51, 51);
 }
-
-
 
 .add_shop {
     font-size: 23px;
@@ -23,7 +36,7 @@
 }
 
 .add_shop:hover {
-    color: rgb(17, 167, 17);
+    color: rgb(46, 177, 46);
     transition: color .15s ease-in-out,
         background-color .15s ease-in-out,
         border-color .15s ease-in-out,
