--- a/Client/src/Container/Wishlist/Wishlist.css
+++ b/Client/src/Container/Wishlist/Wishlist.css
@@ -1,5 +1,5 @@
 .main-container {
-    font-family: "Muli";
+    font-family: 'Nunito';
     position: relative;
 
 }
@@ -11,6 +11,7 @@ h5 {
 .Table {
     margin-left: 20%;
     margin-right: 20%;
+
 }
 
 .delete {
@@ -26,10 +27,11 @@ h5 {
 }
 
 .delete:hover {
-    color: rgb(219, 54, 54);
+    color: #D44638;
 }
 
 .add_shop {
+    color: #95D03A;
     font-size: 23px;
     margin-left: 9px;
     color: rgb(39, 46, 39);
@@ -41,4 +43,15 @@ h5 {
         background-color .15s ease-in-out,
         border-color .15s ease-in-out,
         box-shadow .15s ease-in-out;
+}
+
+.share {
+    bottom: 0%;
+    position: fixed;
+}
+
+.table td,
+.table th {
+    border-top: 1px solid #ffffff;
+    background-color: rgb(255, 255, 255);
 }
